--- a/scss/style.css
+++ b/scss/style.css
@@ -141,6 +141,24 @@ header {
   margin-top: 20px;
   color: #fdfdfd;
 }
+.main__container #searchTitile {
+  display: none;
+}
+.main__container #notFound {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+.main__container #notFound h4 {
+  width: 700px;
+  text-align: center;
+  font-size: 50px;
+  margin-top: 20px;
+  color: #fdfdfd;
+}
 .main__container .card_main {
   display: flex;
   flex-wrap: wrap;
