--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,6 +130,24 @@ header {
         margin-top: 20px;
         color: #fdfdfd;
     }
+    #searchTitile {
+        display: none;
+    }
+    #notFound {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 30px;
+        h4 {
+            width: 700px;
+            text-align: center;
+            font-size: 50px;
+            margin-top: 20px;
+            color: #fdfdfd;
+        }
+    }
     .card_main {
         display: flex;
         flex-wrap: wrap;
